# ollama-deep-researcher-gradio

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  setup.py
examples/: simple_research.py
src/assistant/: configuration.py  graph.py  prompts.py  state.py  utils.py
